--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -5,7 +5,7 @@
 	<input type="password" name="password" placeholder="password"><br>
 	<br>
 	<label class="checkbox">
-		<input type="checkbox"> Remember me
+		<input name="remember" type="checkbox"> Remember me
 	</label>
 	<br>
 	<br>
